--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -317,10 +317,12 @@ div#footer li{
 
 #search {
 		margin: 0.8em auto 0;
+		display:block;
 }
 
 #search input {
 			height: 1.5em;
+			display:block;
 			font-family: 'Ubuntu', sans-serif;
 			width: 30%;
 }
