--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -316,13 +316,12 @@ div#footer li{
 
 
 #search {
-		margin: 0 auto;
-
+		padding: 0 auto;
+		
 }
 
 #search input {
 			height: 1.5em;
-
 			font-family: 'Ubuntu', sans-serif;
 			width: 20em;
 }
