--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -316,7 +316,8 @@ div#footer li{
 
 
 #search {
-		padding: 0 auto;
+		margin: 0 auto;
+		text-align: center;
 		
 }
 
@@ -324,6 +325,7 @@ div#footer li{
 			height: 1.5em;
 			font-family: 'Ubuntu', sans-serif;
 			width: 20em;
+			text-align: center;
 }
 
 @media only screen and (max-width: 50em) { /* 800px */
