--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
     <input type="hidden" name="k8" value="Black"/>
     <input type="hidden" name="k9" value="#FF6600"/>
     <input type="hidden" name="kt" value="Ubuntu"/>
-    <input type="text" name="q" maxlength="255" placeholder="Search and hit Return&hellip;"/>
+    <input type="text" name="q" placeholder="Search and hit Return&hellip;"/>
     <input type="submit" value="DuckDuckGo Search" style="visibility: hidden;" />
 </form>
 		
