--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -316,11 +316,11 @@ div#footer li{
 
 
 #search {
+		margin: 0 auto;
 }
 
 #search input {
-		width: 40%;
-		margin: 0 auto;
+		width: 30em;
 			
 }
 
