--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -316,14 +316,14 @@ div#footer li{
 
 
 #search {
-		margin: 0 auto;
+/*		margin: 0 auto;*/
 }
 
 #search input {
-		width: 40%;
+		width: 50%;
 		max-width: 22em;
 		height: 1.5em;
-		margin: 0 30%;	
+		margin: 0 25%;	
 }
 
 @media only screen and (max-width: 50em) { /* 800px */
