--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,8 @@
     <input type="hidden" name="k8" value="Black"/>
     <input type="hidden" name="k9" value="#FF6600"/>
     <input type="hidden" name="kt" value="Ubuntu"/>
+    <input type="hidden" name="kn" value="1"/>
+	<input type="hidden" name="kj" value="#FF6600"/>
     <input type="text" name="q" placeholder="Search and hit Return&hellip;"/>
     <input type="submit" value="DuckDuckGo Search" style="visibility: hidden;" />
 </form>
