--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -303,7 +303,7 @@ div#footer a:hover {
 div#footer ul {
 		list-style:none; 
 		margin: 0;
-		padding: 2em 8% 1.5em 8%;
+		padding: 2em 15%;
 		width: inherit;
 		max-width: 100%;
 		background-color: #FAFAFA;
