--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
     <input type="hidden" name="k8" value="Black"/>
     <input type="hidden" name="k9" value="#FF6600"/>
     <input type="hidden" name="kt" value="Ubuntu"/>
-    <input type="text" name="q" placeholder="Enter search term and hit Return"/>
+    <input type="text" name="q" placeholder="Search"/>
     <input type="submit" value="DuckDuckGo Search" style="visibility: hidden;" />
 </form>
 		
