--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -329,6 +329,7 @@ div#footer li{
 		-moz-border-radius: 0.5em;
 		border-radius: 0.5em;
 		background-color: #BDBDBD;
+		color: black;
 }
 
 @media only screen and (max-width: 50em) { /* 800px */
