--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -328,7 +328,7 @@ div#footer li{
 		-webkit-border-radius: 0.5em;
 		-moz-border-radius: 0.5em;
 		border-radius: 0.5em;
-		background-color: #BDBDBD;
+		background-color: #A4A4A4;
 		color: black;
 }
 
