--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -348,6 +348,8 @@ div#footer li{
 		div#footer ul {
 				padding: 2em 2.5%;
 		}
+		div#footer p {
+		font-size: 0.7em;}
 }	       
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:112%;} 
