--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -328,7 +328,7 @@ div#footer li{
 		-webkit-border-radius: 0.7em;
 		-moz-border-radius: 0.7em;
 		border-radius: 0.7em;
-		background-color: #DADADA;
+		background-color: #DFDFDF;
 		color: black;
 		border: 1px solid #B8B8B8;
 }
