--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
     <input type="hidden" name="sites" value="blog.timmschoof.com"/>
     <input type="hidden" name="k8" value="%231C1C1C"/>
     <input type="hidden" name="kt" value="Ubuntu"/>
+	<input type="hidden" name="ka" value="Ubuntu"/>
     <input type="text" name="q" placeholder="Search"/>
     <input type="submit" value="DuckDuckGo Search" style="visibility: hidden;" />
 </form>
