--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -293,6 +293,7 @@ div#footer p {
 		line-height: 1.5em;
 		margin: 0;
 		padding: 1.5em 1.3em 1.7em 1.3em;
+		color: #1C1C1C;
 }
 div#footer a {
 		color: #FF6600;
