--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -56,7 +56,7 @@ body {
 		font-weight: 300; 
 		background-color: #FAFAFA;
 		font-size: 1em;	
-		color: #1C1C1C;
+		color: #2E2E2E;
 }
 p {
 		margin: 1.1em 0;
