--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -349,7 +349,8 @@ div#footer li{
 		margin-bottom: 5em;
 }
 		div#footer ul {
-				padding: 2em 2.5%;
+				padding-left: 2.5%;
+				padding-right: 2.5%;
 		}
 		div#footer p {
 		font-size: 0.88em;}
