--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -337,8 +337,8 @@ div#footer li{
 }
 #search input:focus {
 	outline:none;
-    border-color:#9ecaed;
-    box-shadow:0 0 10px #9ecaed;
+    border-color:#FF6600;;
+    box-shadow:0 0 0.8em #FF6600;
 }
 
 @media only screen and (max-width: 50em) { /* 800px */
