--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -338,7 +338,7 @@ div#footer li{
 #search input:focus {
 	outline:none;
     border-color:#FF6600;;
-    box-shadow:0 0 0.3em #FF6600;
+    box-shadow:0 0 0.3em #FF9B58;
 }
 
 @media only screen and (max-width: 50em) { /* 800px */
