--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,5 @@
 	<meta http-equiv="content-language" content="en">
 	<meta name="robots" content="all">
 	<link rel="Shortcut Icon" type="image/x-icon" href="/images/fav.png" />
-	<link rel="stylesheet" media="screen" href="/stylesheets/style_new.css"/>
+	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
 </head>
