--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -279,6 +279,10 @@ p.pic {
 	width: 100%;
 	height: 100%;
 }
+div#article-container {
+
+		margin-bottom: 5em;
+}
 div#footer {
 		position:relative;
 		margin: 0 0 0 0;
