--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div id="article-container">
 <h1><a href="{{ page.url }}" class="title">{{ page.title }}</a></h1>
-<div class="post-meta"><span style="display:none;"><a href="#" rel="author">Timm Schoof</a></span> {{ page.date | date: "%B %d, %Y" }} | {{  page.category  }}</div>
+<p class="post-meta"><span style="display:none;"><a href="#" rel="author">Timm Schoof</a></span> {{ page.date | date: "%B %d, %Y" }} | {{  page.category  }}</p>
 <div class="instapaper_body">
 {{ content }}
 </div>
