--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <hr>
 <div id="footer">
 		<ul>
-			<li><a href="http://timmschoof.com/index_new.html">About</a></li>
+			<li><a href="http://timmschoof.com/index.html">About</a></li>
 			<li><a href="http://blog.timmschoof.com/archives/">Archives</a></li>
 			<li><a href="http://feeds.feedburner.com/timmschoof">Subscribe</a></li>
 		</ul>
