--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -86,6 +86,10 @@ h1 {
 		margin-top: 0em; 
 		text-align: center;
 }
+.page h1 {
+		text-align: center;
+		margin-bottom: 2em;
+}
 h2 {
 		font-weight: 400;
 		font-size: 1.4em; 
