--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -289,6 +289,9 @@ div#article-container {
 
 		margin-bottom: 5em;
 }
+div#instapaper_body {
+		margin-top: 3em;
+}
 div#footer {
 		position:relative;
 		margin: 0 0 0 0;
