--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -290,7 +290,7 @@ div#article-container {
 		margin-bottom: 5em;
 }
 div#instapaper_body {
-		margin-top: 3em;
+		padding-top: 3em;
 }
 div#footer {
 		position:relative;
