--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -289,7 +289,7 @@ div#article-container {
 
 		margin-bottom: 7em;
 }
-.instapaper_body {
+div#instapaper-body {
 		margin-top: 3em;
 }
 div#footer {
