--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -111,7 +111,7 @@ small {
 		font-size: 0.8em;
 }
 hr { 	
-		margin: 3.5em 17% 0 17%;
+		margin: 2em 17% 0 17%;
 		background-color: #FAFAFA;
   		border-color: #FF6600;
 		border-style: solid;
@@ -286,7 +286,6 @@ p.pic {
 	height: 100%;
 }
 div#article-container {
-
 		margin-bottom: 7em;
 }
 div#article-text {
@@ -299,6 +298,7 @@ div#post-pagination {
 }
 .previous {
 		float: left;
+		margin-bottom: 2em;
 }
 .next {
 		float: right;
