--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -296,6 +296,9 @@ div#post-pagination {
 		width: 60%;
 		margin: 0 auto 0 auto;
 }
+div#post-navigation a:hover {
+		opacity: 0.5;  
+}
 .previous {
 		float: left;
 		margin-bottom: 2em;
