--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -115,10 +115,10 @@ hr {
 		background-color: #FAFAFA;
   		border-color: #FF6600;
 		border-style: solid;
-  		border-width: 0.12em 0 0;
+  		border-width: 0.12em 0 0 0;
   		clear: both;
   		height: 0;
-  		max-width: 870px;
+  		text-align: center;
 }
 ol {
 		list-style-type: decimal;
