--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -368,8 +368,8 @@ div#footer li{
 }
 #search input:focus {
 	outline:none;
-    border-color:#FF6600;;
-    box-shadow:0 0 0.15em #FF9B58;
+    border-color: #FF6600;
+    box-shadow:0 0 0.5em #FF9B58;
 }
 
 @media only screen and (max-width: 50em) { /* 800px */
