--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,4 +9,4 @@ layout: default
 </div>
 </div>
 
-{{ post.next }}
+<a href="{{ post.previous.url }}/" title="View {{ post.previous.title }}">View previous article</a>
