--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,4 +9,4 @@ layout: default
 </div>
 </div>
 
-<a href="{{ post.previous.url }}/" title="View {{ post.previous.title }}">View previous article</a>
+<a href="{{ page.previous.url }}/" title="View {{ page.previous.title }}">View previous article</a>
