--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 </div>
 </div>
 
-{% for post in site.pages limit:1 %}
+{% for post in site.posts limit:1 %}
 
 {% if page.previous %}
 <a href="{{ page.previous.url }}/" title="{{ page.previous.title }}">Previous Post</a>
