--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,12 +8,11 @@ layout: default
 {{ content }}
 </div>
 </div>
-
-
-
+<div id="post-pagination" class="pagination">
 {% if page.previous %}
 <a href="{{ page.previous.url }}/" title="{{ page.previous.title }}">Previous Post</a>
 {% endif %}
 {% if page.next %}
 <a href="{{ page.next.url }}/" title="{{ page.next.title }}">Next Post</a>
 {% endif %}
+</div>
