--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,9 @@ layout: default
 </div>
 <div id="post-pagination" class="pagination">
 {% if page.previous %}
-<a href="{{ page.previous.url }}/" title="{{ page.previous.title }}">Previous Post</a>
+<p><a href="{{ page.previous.url }}/" title="{{ page.previous.title }}">Previous Post</a></p>
 {% endif %}
 {% if page.next %}
-<a href="{{ page.next.url }}/" title="{{ page.next.title }}">Next Post</a>
+<p><a href="{{ page.next.url }}/" title="{{ page.next.title }}">Next Post</a></p>
 {% endif %}
 </div>
