--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,6 @@ layout: default
 <p class="next"><a href="{{ page.previous.url }}/" title="View previous post - {{ page.previous.title }}">&larr;</a></p>
 {% endif %}
 {% if page.next %}
-<p class="previous"><a href="{{ page.next.url }}/" title="View next post - {{ page.next.title }}">&rarr;</a></p>
+<p font-size="2em" class="previous"><a href="{{ page.next.url }}/" title="View next post - {{ page.next.title }}">&rarr;</a></p>
 {% endif %}
 </div>
