--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -211,6 +211,8 @@ p.post-meta {
 		margin: 0.15em 0 0.4em 0;
 		font-size: 0.9em;
 }
+a.post-meta {
+}
 img {
 		max-width: 100%;
 		height: auto;
@@ -298,6 +300,17 @@ div#post-pagination {
 		margin: 0 auto 0 auto;
 }
 div#post-pagination a:hover {
+		opacity: 0.5;  
+		color: #FF6600;
+}
+div#post-prevnext {
+		width: 60%;
+		margin: 0 auto 0 auto;
+}
+div#post-prevnext p {
+		font-size: 3em;
+}
+div#post-prevnext a:hover {
 		opacity: 0.5;  
 		color: #FF6600;
 }
