--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -308,7 +308,8 @@ div#post-prevnext {
 		margin: 0 auto 0 auto;
 }
 div#post-prevnext p {
-		font-size: 2em;
+		font-size: 2.3em;
+		line-height: 1em;
 }
 div#post-prevnext a:hover {
 		opacity: 0.5;  
