--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,11 +8,13 @@ layout: default
 {{ content }}
 </div>
 </div>
-<div id="post-prevnext" class="pagination">
+
+
+<!--<div id="post-prevnext" class="pagination">
 {% if page.previous %}
 <a class="next" href="{{ page.previous.url }}/" title="Previous Post: {{ page.previous.title }}">&larr;</a>
 {% endif %}
 {% if page.next %}
 <a class="previous" href="{{ page.next.url }}/" title="Next Post: {{ page.next.title }}">&rarr;</a>
 {% endif %}
-</div>
+</div>-->
