--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 </div>
 </div>
 
-<div id="prevnext"
+<div id="prevnext">
 {% if page.previous %}
 <a class="next" href="{{ page.previous.url }}/" title="Previous Post: {{ page.previous.title }}">&larr;</a>
 {% endif %}
