--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -307,6 +307,7 @@ div#prevnext {
 		text-align: center;
 		width: 80%;
 		margin: auto;
+		margin-bottom: -1em;
 }
 div#prevnext a {
 		font-size: 200%;
