--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -211,7 +211,9 @@ p.post-meta {
 		margin: 0.15em 0 0.4em 0;
 		font-size: 0.9em;
 }
-a.post-meta {
+a:hover.post-meta {
+		opacity: 0.5;  
+		color: #FF6600;
 }
 img {
 		max-width: 100%;
