--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,6 @@
 	<meta name="generator" content="jekyll" />
 	<meta http-equiv="content-language" content="en">
 	<meta name="robots" content="all">
-	<link rel="Shortcut Icon" type="image/x-icon" href="/images/fav.png" />
+	<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
 </head>
