--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,5 @@
 	<meta name="robots" content="all">
 	<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/timmschoof"/>
 </head>
