--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -103,8 +103,8 @@ blockquote, q {
 }
 code {
 		font-family:"Courier New", Courier, monospace;
-		margin: 1em 1.5em 0.5em 2em;
-		padding: 0.19em 0.3em;
+/*		margin: 1em 1.5em 0.5em 2em;
+		padding: 0.19em 0.3em;*/
 		background-color: #F2F2F2;
 }
 small {
