--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -105,7 +105,7 @@ code {
 		font-family:"Courier New", Courier, monospace;
 /*		margin: 1em 1.5em 0.5em 2em; */
 		padding: 0.19em 0.3em;
-		background-color: #F8DAC5;
+		background-color: #A6A6A6;
 }
 small {
 		font-size: 0.8em;
