--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -104,8 +104,8 @@ blockquote, q {
 code {
 		font-family:"Courier New", Courier, monospace;
 /*		margin: 1em 1.5em 0.5em 2em; */
-		padding: 0.1em 0.1em;
-		background-color: #989898;
+		padding: 0.1em 0.2em;
+		background-color: #A6A5A5;
 		-webkit-border-radius: 0.3em;
 		-moz-border-radius: 0.3em;
 		border-radius: 0.3em;
