--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -105,7 +105,7 @@ code {
 		font-family:"Courier New", Courier, monospace;
 /*		margin: 1em 1.5em 0.5em 2em; */
 		padding: 0.1em 0.2em;
-		background-color: #A6A5A5;
+		background-color: #BFBEBE;
 		-webkit-border-radius: 0.3em;
 		-moz-border-radius: 0.3em;
 		border-radius: 0.3em;
