--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <div id="footer">
 		<ul>
 			<li><a href="http://timmschoof.com/">About</a></li>
-			<li><a href="http://feeds.feedburner.com/timmschoof">Subscribe</a></li>
+			<li><a href="http://blog.timmschoof.com/atom.xml">Subscribe</a></li>
 			<li><a href="http://blog.timmschoof.com/archives/">Archives</a></li>
 		</ul>
 
