--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>  
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="initial-scale=1.0, width=device-width"/>
@@ -11,5 +12,5 @@
 	<meta name="robots" content="all">
 	<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
-	<link rel="alternate" type="application/atom+xml" title="RSS" href="http://feeds.feedburner.com/timmschoof"/>
+	<link rel="alternate" type="application/atom+xml" title="RSS" href="http://blog.timmschoof.com/atom.xml"/>
 </head>
