--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,10 @@
 	<meta name="generator" content="jekyll" />
 	<meta http-equiv="content-language" content="en">
 	<meta name="robots" content="all">
-	<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" 
+      type="image/x-icon"
+      href="http://blog.timmschoof.com/favicon.ico">
 	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
 	<link rel="alternate" type="application/atom+xml" title="RSS" href="http://blog.timmschoof.com/atom.xml"/>
 </head>
