--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,4 @@
-/* 
+	/* 
 		http://meyerweb.com/eric/tools/css/reset/ 
 		v2.0 | 20110126
 		License: none (public domain)
@@ -394,6 +394,10 @@ div#footer li{
 	width: 23%;
 	padding: 1em 0;
 } 
+div#searchbox {
+	text-align: center;
+	max-width: 50%;
+}
 
 
 #search {
