--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -59,7 +59,7 @@ body {
 		color: #2E2E2E;
 }
 p {
-		margin: 1.1em 0;
+		margin: 0.7em 0 1.0em 0;
 }
 em {	
 		font-style: italic;
@@ -93,7 +93,7 @@ h2 {
 		font-weight: 400;
 		font-size: 1.4em; 
 		line-height: 1.12; 
-		margin-top: 1.4em; 
+		margin-top: 1.2em; 
 }
 blockquote, q {
 		margin: 1em 1.5em 1em 2em;
