--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -82,7 +82,7 @@ a:hover {
 h1 {	
 		font-weight: 400;
 		font-size: 1.75em; /* 28px */
-		line-height: 1.2; /* 32px */
+		line-height: 1.3;
 		margin-top: 0em; 
 		text-align: center;
 }
