--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
 			<li><a href="http://timmschoof.com/">About</a></li>
 			<li><a href="http://blog.timmschoof.com/atom.xml">Subscribe</a></li>
 			<li><a href="http://blog.timmschoof.com/archives/">Archives</a></li>
+			<li><a href="http://blog.timmschoof.com/impressum/">Impressum/a></li>
 		</ul>
 <div id="searchbox">
 		<script>
