--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -240,6 +240,8 @@ p.pic {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 1.6em;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
 	height: 0;
 }
 .videoWrapper-16-10 {
@@ -258,16 +260,16 @@ p.pic {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 110%;
-	height: 110%;
+	width: 100%;
+	height: 100%;
 }
 .videoWrapper-16-9 object,
 .videoWrapper-16-9 embed,  {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 110%;
-	height: 110%;
+	width: 100%;
+	height: 100%;
 }
 .videoWrapper-16-10 iframe {
 	position: absolute;
