--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -220,8 +220,9 @@ a:hover.post-meta {
 		color: #FF6600;
 }
 img {
-		max-width: 130%;
+		max-width: 115%;
 		height: auto;
+		text-align: center;
 }
 p.pic {
 		text-align: center;
