--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,9 @@ layout: default
 
 <div id="prevnext">
 {% if page.previous %}
-<a class="nextpost" href="{{ page.previous.url }}/" title="Previous Post: {{ page.previous.title }}"><<</a>
+<a class="nextpost" href="{{ page.previous.url }}" title="Previous Post: {{ page.previous.title }}"><<</a>
 {% endif %}
 {% if page.next %}
-<a class="previouspost" href="{{ page.next.url }}/" title="Next Post: {{ page.next.title }}">>></a>
+<a class="previouspost" href="{{ page.next.url }}" title="Next Post: {{ page.next.title }}">>></a>
 {% endif %}
 </div>
