--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -223,7 +223,7 @@ img {
 		max-width: 100%;
 		height: auto;
 }
-gif {
+.gif {
 		text-align: center;
 		margin-left: auto;
     	margin-right: auto;
