--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -96,6 +96,10 @@ h2 {
 		margin-top: 1.3em;
 		margin-bottom: 0.0em; 
 }
+h3 {
+		font-weight: 300;
+		font-size: 1.2em; 
+}
 blockquote, q {
 		margin: 1em 1.5em 1em 2em;
 		color: #848484;
