--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -219,6 +219,7 @@ a:hover.title {
 p.post-meta {
 		margin: 0.15em 0 1.0em 0;
 		font-size: 0.9em;
+		text-indent: 0%;
 }
 a:hover.post-meta {
 		opacity: 0.5;  
