--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
 <gcse:searchbox-only></gcse:searchbox-only>
 </div>-->
 <div id="searchbox">
-		<iframe src="https://duckduckgo.com/search.html?&site=http://blog.timmschoof.com&prefill=Search blog.timmschoof.com using DuckDuckGo" style="overflow:hidden;margin:0;padding:0;width:50%;height:40px;" frameborder="0"></iframe>
+		<iframe src="https://duckduckgo.com/search.html?&site=http://blog.timmschoof.com&prefill=search" style="overflow:hidden;margin:0;padding:0;width:80%;height:30px;" frameborder="0"></iframe>
 		
 </div>
 		<p>This blog's content is licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>, 
