--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>  
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="initial-scale=1.0, width=device-width"/>
 	<meta charset="utf-8"/>
 	<title>{{ page.title }} | {{ site.title }}</title>
