--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 		<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="icon" 
       type="image/x-icon"
-      href="http://blog.timmschoof.com/favicon.ico">
+      href="https://blog.timmschoof.com/favicon.ico">
 	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
-	<link rel="alternate" type="application/atom+xml" title="RSS" href="http://blog.timmschoof.com/atom.xml"/>
+	<link rel="alternate" type="application/atom+xml" title="RSS" href="https://blog.timmschoof.com/atom.xml"/>
 </head>
