--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 	<meta name="keywords" content="Timm, Schoof, Tech, Blog, Apple, Jekyll, Ubuntu, Linux, Movies, Films, Food, Creative Commons" />
 	<meta name="generator" content="jekyll" />
 	<meta http-equiv="content-language" content="en">
+	<meta property="og:image" content="https://blog.timmschoof.com/images/og.jpg">
 	<meta name="robots" content="all">
 		<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="icon" 
