--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 	<meta name="generator" content="jekyll" />
 	<meta http-equiv="content-language" content="en">
 	<meta property="og:image" content="https://blog.timmschoof.com/images/og.jpg">
+<meta property="og:site_name" content="blog.timmschoof.com">
 	<meta name="robots" content="all">
 		<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="icon" 
